--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT=5001
+PORT=
 HOST='127.0.0.1'
 MYSQL_USER='root'
-MYSQL_PASS='1234567890'
-MYSQL_DATABASE='data_management_app'
+MYSQL_PASS=''
+MYSQL_DATABASE=''
